# OxideUi

./: .gitignore  COMMERCIAL.md  Cargo.toml  README.md  TODO.md  safe_fonts.json
.github/: FUNDING.yml
.github/workflows/: auto-assign.yml  release.yml
crates/oxide-core/: Cargo.toml
crates/oxide-core/benches/: layout.rs  state.rs
crates/oxide-core/src/: config.rs  error.rs  event.rs  hot_reload.rs  layout.rs  lib.rs  logging.rs  plugin.rs  reactive.rs  state.rs  text.rs  theme.rs  types.rs  vdom.rs  widget.rs  window.rs
crates/oxide-core/tests/: state_comprehensive_tests.rs
crates/oxide-macros/: Cargo.toml
crates/oxide-macros/src/: lib.rs
crates/oxide-platform/: Cargo.toml
crates/oxide-platform/src/: application.rs  desktop.rs  event_loop.rs  init.rs  lib.rs  web.rs  window.rs
crates/oxide-renderer/: Cargo.toml
crates/oxide-renderer/src/: batch.rs  buffer.rs  device.rs  font_config.rs  font_system.rs  glyph_atlas.rs  gpu.rs  integration.rs  lib.rs  memory.rs  pipeline.rs  profiler.rs  resources.rs  shader.rs  simple_text.rs  software.rs  text.rs  vertex.rs
crates/oxide-renderer/src/backend/: commands.rs  wgpu.rs
crates/oxide-renderer/src/gpu/: buffer_mgr.rs  device.rs  drawing.rs  mod.rs  pipeline_mgr.rs  shader_mgr.rs  surface.rs  texture_mgr.rs
crates/oxide-renderer/src/shaders/: simple.wgsl  ui.wgsl
crates/oxide-widgets/: Cargo.toml
crates/oxide-widgets/src/: builder.rs  button.rs  checkbox.rs  container.rs  dropdown.rs  image.rs  input.rs  layout.rs  lib.rs  prelude.rs  scroll_view.rs  slider.rs  text.rs  theme.rs  widget.rs
crates/strato-core/: Cargo.toml
crates/strato-core/benches/: state.rs
crates/strato-core/src/: config.rs  error.rs  event.rs  hot_reload.rs  inspector.rs  layout.rs  lib.rs  logging.rs  plugin.rs  reactive.rs  state.rs  taffy_layout.rs  text.rs  theme.rs  types.rs  ui_node.rs  validated_rect.rs  vdom.rs  widget.rs  window.rs
crates/strato-macros/: Cargo.toml
crates/strato-macros/src/: lib.rs
crates/strato-platform/: Cargo.toml
crates/strato-platform/src/: application.rs  desktop.rs  event_loop.rs  init.rs  lib.rs  web.rs  window.rs
crates/strato-renderer/: Cargo.toml
crates/strato-renderer/src/: batch.rs  buffer.rs  device.rs  font_config.rs  font_system.rs  glyph_atlas.rs  integration.rs  lib.rs  memory.rs  pipeline.rs  profiler.rs  resources.rs  shader.rs  text.rs  texture.rs  vertex.rs
crates/strato-renderer/src/backend/: commands.rs  mod.rs  wgpu.rs
crates/strato-renderer/src/gpu/: buffer_mgr.rs  device.rs  drawing.rs  mod.rs  pipeline_mgr.rs  render_pass_mgr.rs  shader_mgr.rs  surface.rs  texture_mgr.rs
crates/strato-renderer/src/shaders/: simple.wgsl  ui.wgsl
crates/strato-widgets/: Cargo.toml
crates/strato-widgets/src/: animation.rs  builder.rs  button.rs  checkbox.rs  container.rs  control.rs  dropdown.rs  grid.rs  image.rs  input.rs  inspector.rs  layout.rs  lib.rs  prelude.rs  registry.rs  scroll_view.rs  slider.rs  text.rs  theme.rs  top_bar.rs  widget.rs  wrap.rs
crates/strato-widgets/tests/: control_snapshots.rs  macro_ast_test.rs
crates/strato-widgets/tests/snapshots/: button_state_commands.snap  slider_commands.snap
docs/: INSPECTOR.md  Renderer.md  TECHNICAL_SPECIFICATION.md  VULKAN_VALIDATION_NOTES.md  oxide_ui_toward_a_unified_rust_native_ui_and_graphics_engine.md  strato_sdk_toward_a_unified_rust_native_ui_and_graphics_engine.md  swiftui_parity.md
examples/advanced_renderer/: Cargo.toml
examples/advanced_renderer/shaders/: triangle.wgsl
examples/advanced_renderer/src/: main.rs
examples/animated_showcase/: Cargo.toml
examples/animated_showcase/src/: main.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs
examples/complex_demo/: Cargo.toml
examples/complex_demo/src/: main.rs
examples/comprehensive_test/: Cargo.toml
examples/comprehensive_test/src/: main.rs
examples/control_gallery/: Cargo.toml
examples/control_gallery/src/: main.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/custom_init/: Cargo.toml
examples/custom_init/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/macro_showcase/: Cargo.toml
examples/macro_showcase/src/: main.rs
examples/modern_dashboard/: Cargo.toml
examples/modern_dashboard/src/: app.rs  main.rs  theme.rs
examples/modern_dashboard/src/components/: activity_list.rs  animated_chart.rs  header.rs  mod.rs  sidebar.rs  stats_card.rs
examples/modern_dashboard/src/views/: analytics.rs  dashboard.rs  mod.rs  settings.rs  users.rs
examples/taffy_demo/: Cargo.toml
examples/taffy_demo/src/: main.rs
examples/wasm_demo/: Cargo.toml  README.md  index.html
examples/wasm_demo/src/: lib.rs
src/: lib.rs
