[package]
name = "oxide-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Platform abstraction layer for OxideUI framework"

[dependencies]
oxide-core = { workspace = true }
oxide-renderer = { workspace = true }
oxide-widgets = { workspace = true }

# Math
glam.workspace = true

# Platform
winit.workspace = true
raw-window-handle.workspace = true

# Async
tokio = { workspace = true }
futures.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async utilities
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Element", 
    "HtmlCanvasElement",
    "Window",
    "CssStyleDeclaration",
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "TouchEvent",
]}
js-sys.workspace = true
console_error_panic_hook.workspace = true

[features]
default = []
