[package]
name = "strato-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Core functionality for StratoSDK framework"

[dependencies]
# State Management
arc-swap.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
slotmap.workspace = true
smallvec.workspace = true

# Math
glam.workspace = true
euclid.workspace = true

# Async
tokio = { workspace = true, optional = true, features = ["full"] }
futures.workspace = true

# Hot reload dependencies
notify = { version = "6.0", optional = true }
tokio-tungstenite = { version = "0.20", optional = true }
futures-util = { version = "0.3", optional = true }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = "0.4"

[dev-dependencies]
pretty_assertions.workspace = true
criterion.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "glam/serde"]
async = ["dep:tokio"]
hot-reload = ["dep:notify", "dep:tokio-tungstenite", "dep:futures-util", "async"]

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "state"
harness = false
