[package]
name = "strato-widgets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Widget library for StratoSDK framework"

[dependencies]
strato-core = { workspace = true }
strato-renderer = { workspace = true }

# Math
glam.workspace = true

# State
parking_lot.workspace = true
smallvec.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = []
