[package]
name = "advanced_renderer_example"
version = "0.1.0"
edition = "2021"
description = "Advanced wgpu renderer example demonstrating the complete system"

[dependencies]
# Core renderer
oxide-renderer = { path = "../../crates/oxide-renderer" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Windowing
winit = "0.30"

# Graphics
wgpu = "22.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math (if needed for more complex examples)
glam = "0.29"

# Serialization (for configuration)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
debug = ["oxide-renderer/debug"]
profiling = ["oxide-renderer/profiling"]

[[bin]]
name = "advanced_renderer"
path = "src/main.rs"