[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
strato-core = { path = "../../crates/strato-core" }
strato-widgets = { path = "../../crates/strato-widgets" }
strato-platform = { path = "../../crates/strato-platform" }
strato-macros = { path = "../../crates/strato-macros" }
strato-sdk = { path = "../.." }

tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
parking_lot = "0.12"