[package]
name = "comprehensive_test"
version = "0.1.0"
edition = "2021"

[dependencies]
strato-core = { path = "../../crates/strato-core" }
strato-platform = { path = "../../crates/strato-platform" }
strato-widgets = { path = "../../crates/strato-widgets" }
strato-renderer = { path = "../../crates/strato-renderer" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
anyhow = "1.0"
