[package]
name = "macro_showcase"
version = "0.1.0"
edition = "2021"

[dependencies]
strato-core = { workspace = true }
strato-widgets = { workspace = true }
strato-platform = { workspace = true }
strato-macros = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1.0"
tokio = { workspace = true }
